@@ -1,1 +1,0 @@
-m68k-.*-.*              libgcc_s=2
